<resources>
    <string name="app_name">Movies App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="title_search">Search</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="overview">Overview</string>
    <string name="movie_title">Movie Title</string>
    <string name="no_such_movies">No Such Movies.</string>
    <string name="no_internet_connection">No Internet Connection.</string>
</resources>