<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_home__srl_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">

            <TextView
                android:id="@+id/fragment_home__tv_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home__rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_top_rated"
                app:layout_constraintStart_toStartOf="parent"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/fragment_home__tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__rv_top_rated"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_top_rated"
                style="@style/header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home__rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_popular"
                app:layout_constraintStart_toStartOf="parent"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/fragment_home__tv_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__rv_popular"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_top_rated"
                style="@style/header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home__rv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_latest"
                app:layout_constraintStart_toStartOf="parent"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/fragment_home__tv_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__rv_latest"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_top_rated"
                style="@style/header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home__rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_now_playing"
                app:layout_constraintStart_toStartOf="parent"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/fragment_home__tv_no_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>